name:                DevUtils-MySQL
version:             0.1.0.0
synopsis:            MySQL helpers
homepage:            https://github.com/adarqui/DevUtils-MySQL
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.MySQL
   System.DevUtils.MySQL.Include
   System.DevUtils.MySQL.Include.ProcessList
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, bytestring ==0.10.4.0, mysql-simple ==0.2.2.3
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src

executable "simple"
  main-is:             simple.hs
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, bytestring ==0.10.4.0, mysql-simple ==0.2.2.3, DevUtils-MySQL
  GHC-Options:         -O3 -Wall -rtsopts
  hs-source-dirs:      examples
