name:                DevUtils-MySQL
version:             0.1.0.0
synopsis:            MySQL helpers
homepage:            https://github.com/adarqui/DevUtils-MySQL
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.MySQL
   System.DevUtils.MySQL.Simple
   System.DevUtils.MySQL.Include
   System.DevUtils.MySQL.Helpers.ProcessList
   System.DevUtils.MySQL.Helpers.ProcessList.Include
   System.DevUtils.MySQL.Helpers.ProcessList.Default
   System.DevUtils.MySQL.Helpers.ProcessList.JSON
   System.DevUtils.MySQL.Helpers.ProcessList.Run
   System.DevUtils.MySQL.Helpers.Databases
   System.DevUtils.MySQL.Helpers.Databases.Include
   System.DevUtils.MySQL.Helpers.Databases.Default
   System.DevUtils.MySQL.Helpers.Databases.JSON
   System.DevUtils.MySQL.Helpers.Databases.Run
   System.DevUtils.MySQL.Helpers.Tables
   System.DevUtils.MySQL.Helpers.Tables.Include
   System.DevUtils.MySQL.Helpers.Tables.Default
   System.DevUtils.MySQL.Helpers.Tables.JSON
   System.DevUtils.MySQL.Helpers.Tables.Run
  build-depends:       base ==4.7.*, bytestring ==0.10.4.0, mysql-simple ==0.2.2.3, aeson ==0.7.0.6, DevUtils-Base
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src

executable "simple"
  main-is:             simple.hs
  build-depends:       base ==4.7.*, bytestring ==0.10.4.0, mysql-simple ==0.2.2.3, DevUtils-MySQL
  GHC-Options:         -O2 -Wall -rtsopts
  hs-source-dirs:      examples
